LATEST VERSION
-----------------------------
- report wrong xml file format as error